# neva-consumer

./: README.md  docker-compose.yaml
core_data_service/: Dockerfile  Makefile.deprecated  docker-compose.yml  pyproject.toml
core_data_service/dev_tools/: parse_doc.py
core_data_service/docker/: dev-docker-compose.template.yml  docker-compose.template.yml  local-docker-compose.yml
core_data_service/env/: local.sh  test.sh
core_data_service/src/app/: __init__.py  builder.py  cache.py
core_data_service/src/app/api/http/v1/: __init__.py  measure_points.py  reports.py  scada.py  status.py  weather.py
core_data_service/src/app/api/http/v2/: __init__.py  reports.py
core_data_service/src/app/core/: decorators.py  exc_handling.py  exceptions.py  new_types.py
core_data_service/src/app/core/config/: __init__.py  postgres.py
core_data_service/src/app/dblayer/: connection.py
core_data_service/src/app/file_converters/: base_strategy.py
core_data_service/src/app/file_converters/boiler_room_engineer/: __init__.py  json.py  xlsx.py
core_data_service/src/app/models/: measure_points.py  report.py
core_data_service/src/app/models/v1/: scada.py
core_data_service/src/app/models/v2/: report.py
core_data_service/src/app/repositories/: providers.py
core_data_service/src/app/repositories/measure_points/: __init__.py
core_data_service/src/app/repositories/reports/: __init__.py
core_data_service/src/app/repositories/scada/: __init__.py
core_data_service/src/app/services/: providers.py
core_data_service/src/app/services/reports/: __init__.py
(+407 files in other folders)
