[tool.poetry]
name = "Core data service"
version = "0.1.1"
description = "Core data service"
package-mode = false 
authors = ["Evgeniy Zelenov <evgeniy.zelenoff@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
alembic = "1.13.1"
fastapi = "0.115.0"
asyncpg = "0.29.0"
psycopg = { version = "3.1.18", extras = ["binary", "pool"] }
uvicorn = "0.30.6"
pandas = "2.2.3"
aiocache = "0.12.3"
openpyxl = "3.1.5"
APScheduler = "3.11.0"

[poetry.group.dev.dependencies]
pytest = "8.0.1"
pytest-asyncio = "0.23.5"
psycopg2-binary = "2.9.9"
pytest-cov = "4.1.0"
testcontainers = "3.7.1"
faker = "23.2.1"
pylint = "3.1.0"

[tool.black]
line-length = 120
exclude = '''
  src/app/alembic
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.12
warn_return_any = true
ignore_missing_imports = true
warn_unused_configs = true
exclude = [
    "src/app/alembic",
    "src/tests",
]

[mypy-google.protobuf]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
